Chnage Log: Goblins now drop armor sometimes Fixed help not showing up Removed lvl 3 beacuse of a bug

--- a/css/alpha.css
+++ b/css/alpha.css
@@ -1,3 +1,4 @@
 .terminal {
     --size: 2;
+    --color: white;
 }
